# penguin-2d

./: .gitignore  CMakeLists.txt  README.md
docs/: gameloop.md
penguin_2d/: CMakeLists.txt  penguin_2d.cpp  penguin_renderer.cpp  penguin_window.cpp  vector2.hpp
penguin_2d/docs/: gameloop.md
penguin_2d/examples/pong/: CMakeLists.txt  ball.hpp  main.cpp  main.hpp  paddle.hpp  pong.cpp  pong.hpp
penguin_2d/examples/render_shapes/: CMakeLists.txt  main.cpp  main.hpp  render_shapes.cpp  render_shapes.hpp
penguin_2d/examples/snake/: CMakeLists.txt  main.cpp  main.hpp  snake.cpp  snake.hpp
penguin_2d/include/: colour.hpp  exception.hpp  penguin_2d.hpp  penguin_app.hpp  penguin_drawable.hpp  penguin_event_handler.hpp  penguin_font.hpp  penguin_game.hpp  penguin_input.hpp  penguin_renderer.hpp  penguin_sdl_manager.hpp  penguin_sprite.hpp  penguin_test_game.hpp  penguin_text.hpp  penguin_text_engine.hpp  penguin_text_renderer.hpp  penguin_timer.hpp  penguin_transformable.hpp  penguin_window.hpp  rect2.hpp  text.hpp  vector2.hpp
penguin_2d/include/common/: circle2.hpp  colour.hpp  exception.hpp  rect2.hpp  vector2.hpp
penguin_2d/include/core/: penguin_base_game.hpp  penguin_event_handler.hpp  penguin_game.hpp  penguin_game_window.hpp  penguin_init.hpp  penguin_input.hpp  penguin_main.hpp  penguin_renderer.hpp  penguin_sdl_manager.hpp  penguin_text_renderer.hpp  penguin_timer.hpp  penguin_window.hpp
penguin_2d/include/entities/: penguin_entity.hpp  penguin_transformable.hpp
penguin_2d/include/rendering/: penguin_font.hpp  penguin_sprite.hpp  penguin_text.hpp
penguin_2d/src/: penguin_2d.cpp  penguin_event_handler.cpp  penguin_font.cpp  penguin_game.cpp  penguin_input.cpp  penguin_renderer.cpp  penguin_test_game.cpp  penguin_text.cpp  penguin_text_renderer.cpp  penguin_timer.cpp  penguin_window.cpp
penguin_2d/src/core/: penguin_event_handler.cpp  penguin_game.cpp  penguin_game_window.cpp  penguin_input.cpp  penguin_renderer.cpp  penguin_text_renderer.cpp  penguin_timer.cpp  penguin_window.cpp
penguin_2d/src/rendering/: penguin_font.cpp  penguin_sprite.cpp  penguin_text.cpp
